tests, layout fixes.

--- a/src/app/action-items/action-items.component.css
+++ b/src/app/action-items/action-items.component.css
@@ -20,21 +20,21 @@
     align-items: baseline;
 }
 
-.assigned-label {
+.assignedLabel {
     margin: 20px 0;
     display: flex;
     align-items: baseline;
 }
 
-.filter-opt {
+.filterOpt {
     margin-right: 10px;
 }
 
-.filter-list i {
+.filterList i {
     font-size: 15px;
 }
 
-.filter-list {
+.filterList {
     text-transform: uppercase;
     color: #4e5860;
     font-size: 12px;
@@ -53,11 +53,11 @@
     cursor: pointer;
 }
 
-.new-item-button {
+.newItemButton {
     margin: 20px 0;
 }
 
-.add-item {
+.addItem {
     width: 200px;
     height: 30px;
     background-color: #e14504;
@@ -68,28 +68,28 @@
     cursor: pointer;
 }
 
-.table-container {
+.tableContainer {
     display: block;
     width: 95%;
     margin: 0 auto;
     height: 100%;
 }
 
-:host .t-body {
+:host .tBody {
     margin-top: 3px;
     overflow-y: auto;
     overflow-x: hidden;
     height: calc(100% - 300px);
 }
 
-.flex-table {
+.flexTable {
     display: flex;
     flex-flow: row no-wrap;
     transition: 0.5s;
     color: #979797;
 }
 
-.flex-table.header {
+.flexTable.header {
     background-color: #ffffff;
     text-transform: uppercase;
     padding: 10px;
@@ -98,31 +98,31 @@
     top: 0;
 }
 
-.flex-table.row {
+.flexTable.row {
     background-color: #ffffff;
     margin-bottom: 3px;
     padding: 5px 0;
     border-bottom: 2px solid transparent;
 }
 
-.flex-table.row:last-child {
+.flexTable.row:last-child {
     margin-bottom: 0;
 }
 
-.flex-table.row:hover {
+.flexTable.row:hover {
     border-bottom: 2px solid #3d7dca;
 }
 
-.project-name {
+.projectName {
     font-size: 12px;
     color: #979797;
 }
 
-.flex-row.body-cell {
+.flexRow.bodyCell {
     font-size: 10px;
 }
 
-.flex-row.body-cell.first {
+.flexRow.bodyCell.first {
     font-size: 14px;
     padding: 0 15px;
 }
@@ -132,19 +132,19 @@
     padding-bottom: 5px;
 }
 
-.flex-row.body-header {
+.flexRow.bodyHeader {
     font-size: 12px;
     color: #979797;
     text-align: left;
 }
 
-.flex-row {
+.flexRow {
     width: calc(100% / 5);
     text-align: left;
     padding: 10px 0;
 }
 
-.flex-row.body-header.first {
+.flexRow.bodyHeader.first {
     width: 55%;
     padding-right: 10px;
 }
@@ -163,29 +163,29 @@
     padding: 0;
 }
 
-.body-cell {
+.bodyCell {
     padding: 30px 7px;
     color: #4e5860;
     display: inline;
 }
 
-.body-header {
+.bodyHeader {
     text-align: center;
     padding-right: 10px;
 }
 
-.body-header.first {
+.bodyHeader.first {
     text-align: left;
     padding-left: 30px;
 }
 
-.flex-row.body-cell.first {
+.flexRow.bodyCell.first {
     display: flex;
     align-items: center;
     width: 55%;
 }
 
-.title-container {
+.titleContainer {
     margin: 0 10px;
 }
 
@@ -197,7 +197,7 @@
     text-overflow: ellipsis;
 } */
 
-.flex-cell {
+.flexCell {
     width: calc(100% / 3);
     text-align: center;
     padding: 0.5em 0.5em;
@@ -217,19 +217,19 @@
     font-size: 10px;
 }
 
-.t-body::-webkit-scrollbar-track {
+.tBody::-webkit-scrollbar-track {
     background-color: #D0D0D0;
 }
 
 
 /* scrollbar */
 
-.t-body::-webkit-scrollbar {
+.tBody::-webkit-scrollbar {
     width: 12px;
     background-color: #D0D0D0;
 }
 
-.t-body::-webkit-scrollbar-thumb {
+.tBody::-webkit-scrollbar-thumb {
     border-radius: 10px;
     background-color: #686868;
 }
