--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,19 +1,19 @@
 <!-- top  menu -->
-<div class="menu-container">
-    <div class="top-row">
-        <div class="menu-wrapper">
+<div class="menuContainer">
+    <div class="topRow">
+        <div class="menuWrapper">
             <nav class="menu">
-                <div class="menu-items">
-                    <a class="menu-link" href="#">products</a>
-                    <a class="menu-link" href="#">action items</a>
-                    <a class="menu-link" href="#">inbox</a>
+                <div class="menuItems">
+                    <a class="menuLink" href="#">products</a>
+                    <a class="menuLink" href="#">action items</a>
+                    <a class="menuLink" href="#">inbox</a>
                 </div>
             </nav>
         </div>
-        <div class="navbar-title">
-            <div class="navbar-icon"></div>
-            <div class="navbar-paragraph">
-                <p class="navbar-parag">All Projects</p>
+        <div class="navbarTitle">
+            <div class="navbarIcon"></div>
+            <div class="navbarParagraph">
+                <p class="navbarParag">All Projects</p>
             </div>
         </div>
     </div>
