--- a/src/app/add-item/add-item.component.css
+++ b/src/app/add-item/add-item.component.css
@@ -17,7 +17,7 @@
         position: relative;
     }
     
-    .invalid-feedback {
+    .invalidFeedback {
         font-size: 12px;
         color: #f44336;
     }
@@ -41,7 +41,7 @@
         justify-content: flex-end;
     }
     
-    .mat-raised-button {
+    .matRaisedButton {
         text-transform: uppercase;
         border: none;
         box-shadow: none;
@@ -52,12 +52,12 @@
         margin: 2px;
     }
     
-    .mat-raised-button:hover:enabled {
+    .matRaisedButton:hover:enabled {
         background-color: #ddd4d4;
         color: white;
     }
     
-    .mat-raised-button span {
+    .matRaisedButton span {
         margin: 1px 2px;
         padding: 1px 2px;
     }
