--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,4 +1,4 @@
-.menu-container {
+.menuContainer {
     padding-bottom: 25px;
     display: flex;
     padding-left: 115px;
@@ -6,11 +6,11 @@
     height: 122px;
 }
 
-.menu-wrapper {
+.menuWrapper {
     padding-top: 18px;
 }
 
-.menu-link {
+.menuLink {
     font-size: 12px;
     color: #ffffff;
     letter-spacing: 0.36px;
@@ -29,7 +29,7 @@ a:hover {
     font-weight: bold;
 }
 
-.navbar-paragraph p {
+.navbarParagraph p {
     font-size: 23px;
     color: #ffffff;
     font-weight: 300;
