--- a/src/app/action-items/action-items.component.css
+++ b/src/app/action-items/action-items.component.css
@@ -129,7 +129,7 @@
 }
 
 .flexRow {
-    width: calc(100% / 5);
+    width: calc(100% / 6);
     text-align: left;
     padding: 10px 0;
 }
@@ -144,6 +144,11 @@
     flex-flow: row wrap;
     align-items: flex-start;
     justify-content: center;
+}
+
+.fa-edit {
+    font-size: 13px;
+    color: #4e5860;
 }
 
 .column {
