--- a/src/app/action-items/action-items.component.html
+++ b/src/app/action-items/action-items.component.html
@@ -48,6 +48,7 @@
         </div>
     </div>
     <div class="innerContainer detailsContainer">
-        <app-item-details [id]="actionItemId"></app-item-details>
+        <app-item-details [id]="actionItemId">
+        </app-item-details>
     </div>
 </div>
