--- a/src/app/item-details/item-details.component.css
+++ b/src/app/item-details/item-details.component.css
@@ -1,13 +1,71 @@
-.selectItemParagraph {
-    text-align: center;
-    font-size: 14px;
-    color: #979797;
-    margin-bottom: 50px;
-}
-
-.details {
-    text-align: left;
-    font-size: 14px;
-    color: #979797;
-    line-height: 2em;
-}
+        .selectItemParagraph {
+            text-align: center;
+            font-size: 14px;
+            color: #979797;
+            margin-bottom: 50px;
+        }
+        
+        .details {
+            text-align: left;
+            font-size: 14px;
+            color: #979797;
+            line-height: 2em;
+            padding: 20px;
+        }
+        
+        .title {
+            color: #69A3B9;
+            font-size: 22px;
+            font-weight: 300;
+            margin-bottom: 10px;
+            display: flex;
+            justify-content: space-between;
+        }
+        
+        .detailsTop {
+            border-bottom: 1px solid #d8d1d1;
+            padding-bottom: 2px;
+        }
+        
+        .top {
+            display: flex;
+            justify-content: space-between;
+        }
+        
+        .projectName {
+            text-align: left;
+            font-size: 17px;
+            color: #4e5860;
+            font-weight: 300;
+            margin-bottom: 10px;
+        }
+        
+        .fa {
+            padding: 5px;
+            margin: 0 3px;
+            border-radius: 50%;
+            border: 1px solid #d8d1d1;
+        }
+        
+        .dueDate {
+            font-size: 11px;
+            text-transform: uppercase;
+        }
+        
+        .center {
+            padding-top: 5px;
+            border-bottom: 1px solid #d8d1d1;
+            padding-bottom: 2px;
+        }
+        
+        .circularDiagrams {
+            display: flex;
+            justify-content: center;
+        }
+        
+        .diagram {
+            padding: 5px;
+            margin-top: 20px;
+            text-transform: uppercase;
+            font-size: 11px;
+        }
