--- a/src/app/item-details/item-details.component.css
+++ b/src/app/item-details/item-details.component.css
@@ -42,7 +42,7 @@
         
         .fa {
             padding: 5px;
-            margin: 0 3px;
+            margin: 0 10px;
             border-radius: 50%;
             border: 1px solid #d8d1d1;
         }
@@ -64,8 +64,31 @@
         }
         
         .diagram {
-            padding: 5px;
-            margin-top: 20px;
+            padding: 10px;
+            margin: 10px;
+            margin-top: 5px;
             text-transform: uppercase;
             font-size: 11px;
+        }
+        
+        .positionRelative {
+            position: relative;
+        }
+        
+        .diagramValue {
+            left: 0;
+            top: 25%;
+            position: absolute;
+            width: 100%;
+            text-align: center;
+            font-size: 20px;
+            font-weight: 300;
+        }
+        
+        .daysLeft {
+            color: #AE1919;
+        }
+        
+        .complete {
+            color: rgb(59, 101, 117);
         }
