--- a/src/app/action-items/action-items.component.html
+++ b/src/app/action-items/action-items.component.html
@@ -44,11 +44,12 @@
 
                 </div>
                 <div class="flexRow bodyCell inner" role="cell"><a [routerLink]="['items/', t.id]"><i class="fa fa-edit"></i></a></div>
+                <!-- [queryParams]="{ id: t.id }" -->
             </div>
         </div>
     </div>
     <div class="innerContainer detailsContainer">
-        <app-item-details [id]="actionItemId">
+        <app-item-details [id]="actionItemId" [item]="actionItem">
         </app-item-details>
     </div>
 </div>
