--- a/src/app/item-details/item-details.component.css
+++ b/src/app/item-details/item-details.component.css
@@ -34,15 +34,16 @@
         
         .projectName {
             text-align: left;
-            font-size: 17px;
+            font-size: 15px;
             color: #4e5860;
             font-weight: 300;
             margin-bottom: 10px;
+            margin-top: 30px;
         }
         
         .fa {
             padding: 5px;
-            margin: 0 10px;
+            margin: 0 5px;
             border-radius: 50%;
             border: 1px solid #d8d1d1;
         }
