--- a/src/app/item-details/item-details.component.html
+++ b/src/app/item-details/item-details.component.html
@@ -1,10 +1,9 @@
 <div class="details-container">
-    <div class="details">
+    <div class="details" *ngIf="item">
         <div class="detailsTop">
             <div class="detail title">
                 <div class="top">
-                    <div>Action Item Title</div>
-                    <div *ngIf="item">{{item.title}}</div>
+                    <div>{{item.title}}</div>
                 </div>
                 <div class="top">
                     <div class="detailIcon"><i class="fa fa-edit"></i></div>
@@ -12,28 +11,28 @@
                 </div>
             </div>
             <div class="detail projectName">
-                <div>Project Name</div>
+                <div>{{item.projectName}}</div>
             </div>
         </div>
         <div class="center">
             <div class="detail dueDate">
-                <div>Due Date:</div>
+                <div>Due Date: {{(item.dueDate | date: 'dd/MM/yyyy') || '-'}}</div>
             </div>
             <div class="circularDiagrams">
                 <div class="diagram positionRelative">
                     <div class="detail">
                         <round-progress [current]="30" [max]="60" [background]="'#eaeaea'" [radius]="35" [color]="'#AE1919'" [stroke]="2">30</round-progress>
                         <div class="diagramValue daysLeft">
-                            50
+                            {{item.dueDay}}
                         </div>
                         <div>Days Left</div>
                     </div>
                 </div>
                 <div class="diagram positionRelative">
                     <div class="detail">
-                        <round-progress [current]="30" [max]="60" [background]="'#eaeaea'" [radius]="35" [color]="'#69A3B9'" [stroke]="2">30</round-progress>
+                        <round-progress [current]="item.completed" [max]="100" [background]="'#eaeaea'" [radius]="35" [color]="'#69A3B9'" [stroke]="2">30</round-progress>
                         <div class="diagramValue complete">
-                            50
+                            {{item.completed}}
                         </div>
                         <div>% Complete</div>
                     </div>
