--- a/src/app/action-items/action-items.component.html
+++ b/src/app/action-items/action-items.component.html
@@ -46,7 +46,7 @@
         </div>
     </div>
     <div class="innerContainer detailsContainer">
-        <app-item-details [id]="actionItemId" [item]="actionItem">
+        <app-item-details [id]="actionItemId" [item]="actionItem | async">
         </app-item-details>
     </div>
 </div>
