--- a/src/app/action-items/action-items.component.html
+++ b/src/app/action-items/action-items.component.html
@@ -25,7 +25,7 @@
             <i class="fa fa-spinner fa-spin"></i>
         </div>
         <div class="tBody" *ngIf="!isloadingActionItems">
-            <div class="flexTable row singleItem" role="rowgroup" *ngFor="let t of dataSource">
+            <div [routerLink]="['/items']" [queryParams]="{ id: t.id }" routerLinkActive="router-link-active" class="flexTable row singleItem" role="rowgroup" *ngFor="let t of dataSource">
                 <div class="flexRow bodyCell first" role="cell">
                     <div class="titleContainer" id="circleContainer">
                         <i class="fa fa-circle" [ngClass]="t.dueDay | circleColor"></i>
@@ -41,12 +41,13 @@
                 <div class="flexRow bodyCell inner" role="cell">
                     {{ t.dueDay }}
                 </div>
-                <div class="flexRow bodyCell inner" role="cell"><a [routerLink]="['/items']" [queryParams]="{ id: t.id }"><i class="fa fa-edit"></i></a></div>
+                <div class="flexRow bodyCell inner" role="cell">
+                    <a><i class=" fa fa-edit"></i></a></div>
             </div>
         </div>
     </div>
-    <div class="innerContainer detailsContainer">
-        <app-item-details [id]="actionItemId" [item]="actionItem | async">
+    <div class="innerContainer detailsContainer ">
+        <app-item-details [id]="actionItemId " [item]="actionItem | async">
         </app-item-details>
     </div>
 </div>
