--- a/src/app/action-items/action-items.component.html
+++ b/src/app/action-items/action-items.component.html
@@ -42,7 +42,8 @@
                     {{ t.dueDay }}
                 </div>
                 <div class="flexRow bodyCell inner" role="cell">
-                    <a><i class=" fa fa-edit"></i></a></div>
+                    <a><i class=" fa fa-edit"></i></a>
+                </div>
             </div>
         </div>
     </div>
