"view item details"

--- a/src/app/action-items/action-items.component.css
+++ b/src/app/action-items/action-items.component.css
@@ -104,7 +104,7 @@
 }
 
 .router-link-active {
-    background-color: #dde4ec !important;
+    background-color: rgb(200, 224, 233) !important;
     outline: 0;
 }
 
