--- a/src/app/item-details/item-details.component.css
+++ b/src/app/item-details/item-details.component.css
@@ -106,5 +106,11 @@
     color: #979797;
     line-height: 2em;
     padding: 20px;
-    margin-top: 50%;
+    margin-top: 45%;
+}
+
+.spinner {
+    text-align: center;
+    margin-top: 150px;
+    color: #003c4d;
 }
