"select item message"

--- a/src/app/item-details/item-details.component.html
+++ b/src/app/item-details/item-details.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="isLoadingActionItem && !item" class="spinner">
+<div *ngIf="isLoadingActionItem" class="spinner">
     <i class="fa fa-spinner fa-spin"></i>
 </div>
-<div *ngIf="!item" class="selectItem">
+<div *ngIf="item === undefined" class="selectItem">
     <p>No existing item selected. Select an Action Item to view details.<i class="fa fa-mouse-pointer"></i></p>
 </div>
 <div class="details-container" *ngIf="!isLoadingActionItem">
