"css change, pipe usage in the templates"

--- a/src/app/action-items/action-items.component.html
+++ b/src/app/action-items/action-items.component.html
@@ -39,7 +39,7 @@
                 <div class="flexRow bodyCell inner" role="cell">{{ t.completed }}%</div>
                 <div class="flexRow bodyCell inner" role="cell">{{ (t.dueDate | date: 'dd/MM/yyyy') || '-' }}</div>
                 <div class="flexRow bodyCell inner" role="cell">
-                    {{ t.dueDay }}
+                    {{ t | daysLeftCounted}}
                 </div>
                 <div class="flexRow bodyCell inner" role="cell">
                     <a><i class=" fa fa-edit"></i></a>
