--- a/src/app/action-items/action-items.component.css
+++ b/src/app/action-items/action-items.component.css
@@ -89,7 +89,6 @@
 }
 
 .flexTable.row {
-    background-color: #ffffff;
     margin-bottom: 3px;
     padding: 5px 0;
     border-bottom: 2px solid transparent;
@@ -104,7 +103,7 @@
 }
 
 .router-link-active {
-    background-color: rgb(200, 224, 233) !important;
+    background-color: rgb(200, 224, 233);
     outline: 0;
 }
 
@@ -257,4 +256,5 @@
     overflow-y: auto;
     overflow-x: hidden;
     height: calc(100% - 55px);
+    background-color: #ffffff;
 }
