"e2e test for displaying action items details"

--- a/src/app/item-details/item-details.component.html
+++ b/src/app/item-details/item-details.component.html
@@ -8,8 +8,8 @@
     <div class="details" *ngIf="item">
         <div class="detailsTop">
             <div class="detail title">
-                <div class="top">
-                    <div>{{item.title}}</div>
+                <div class="top title">
+                    <div class="itemTitle">{{item.title}}</div>
                 </div>
                 <div class="top">
                     <div class="detailIcon"><i class="fa fa-edit"></i></div>
